# cursach_content

./: Cargo.toml  Readme.md  draw_graphs_for_article.ipynb  e.ipynb  form_part.py  gen_graph.json  sample_dag  stat_workflow.sh  workflow.sh
src/: absorb.rs  get_dag_stat.rs  get_gen_dag_stat.rs  instance.rs  main.rs  main_version_other.rs  pure_dag.rs  statistic.rs  task_dag.rs
